--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "DIDapp - la web en una app",
   "short_name": "DID",
   "description": "Usa tus servicios DID favoritos en una app",
-  "start_url": "index.html",
+  "start_url": "app.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#f0f",
